fix preload product di getmytransaction
